# voxaboxen

./: .dict-allowed.txt  .gitignore  .pre-commit-config.yaml  CITATION.cff  MT-grid-search.sh  README.md  active_learning_sampling.py  analyse_zfdset.py  check_noverlaps_of_synthozf.py  collate_inference_times.py  compute_overlaps.py  conftest.py  data.py  dset_setup.sh  environment.yml  eval_whisperseg.py  evaluation.py  fn_profiling.py  format_OZF.py  gather_results.py  get_dataset_metadata.py  inter_annot_agreement.py  main.py  model.py  monte_carlo_overlaps.py  plotters.py  pyproject.toml  raven_utils.py  read_grid_search.py  remove_hardcoded_paths.py  requirements-dev.txt  requirements.txt  run.sh  setup.py  test_inference_time.py  test_run_commands.sh  train.py  util.py  utils.py
.github/workflows/: pre-commit.yml  pythonapp.yml
config/: crow_cuckoo.yaml  focal_nonfocal.yaml
datasets/AnuraSet/: process_AnuraSet.py
datasets/BV/: process_BV.py
datasets/HT/: process_HT.py
datasets/MT/: process_MT.py
datasets/birdvox_full_night/: process_birdvox_full_night.py
datasets/hawaii/: process_hawaii.py
datasets/integration_test_data/: test_info.csv  train_audio.txt  train_info.csv  val_info.csv
datasets/powdermill/: process_powdermill.py
datasets/western_birds/: process_western_birds.py
datasets/zebra_finch_stereo/: process.py
model_comparisons/: config.yaml  configuration.py  dataloaders.py  evaluate.py  train.py
scripts/: BV_experiment.py  BV_experiment_detectron.py  HT_experiment.py  MT_experiment.py  MT_experiment_detectron.py  bvfn_experiment.py  bvfn_experiment_coreset.py  bvfn_experiment_random.py  bvfn_experiment_uncertainty.py  collate_inference_times.py  filter_zf_background_clips.py  hawaii_experiment.py  hawaii_experiment_coreset.py  hawaii_experiment_detectron.py  hawaii_experiment_random.py  hyperparameter_tuning.py  make_detection_data.all.py  make_detection_data.all_crows.py  make_detection_data_alala.py  make_detection_data_crows.py  make_detection_data_crows_merge.py  make_slowed_version.py  make_synthetic_zf_data.py  old_voxaboxen_experiments.sh  powdermill_experiment.py  powdermill_experiment_coreset.py  powdermill_experiment_detectron.py  powdermill_experiment_random.py  qf_zf_data.py  voxaboxen_experiments.sh
source/active_learning/: active_learning_sampling.py  coreset_sampling.py  params.py  query_oracle.py  random_sampling.py  uncertainty_sampling.py
source/comparisons/: README.md  dataloaders.py  evaluate.py  params.py  plotters.py  train.py
source/data/: data.py
source/evaluation/: evaluation.py  metrics.py  plotters.py  raven_utils.py
source/inference/: inference.py  params.py
source/model/: model.py
source/project/: params.py  project_setup.py
source/training/: params.py  train.py  train_model.py
tests/: __init__.py
tests/consistency/: __init__.py  test_docstrings.py
tests/integration/: test_training.py
tests/unittests/: test_units.py
tests/utils/: check_docstrings.py
voxaboxen/comparisons/: README.md  dataloaders.py  evaluate.py  nms.py  params.py  train.py
voxaboxen/data/: data.py
voxaboxen/evaluation/: conf_mats.py  evaluation.py  metrics.py  nms.py  plotters.py  raven_utils.py
voxaboxen/inference/: inference.py  params.py
voxaboxen/model/: beats.py  crnn.py  encoders.py  frame_atst.py  model.py
voxaboxen/project/: params.py  project_setup.py
voxaboxen/training/: params.py  train.py  train_model.py
weights/: aves-base-bio.torchaudio.model_config.json
