[project]
name = "voxaboxen"
version = "0.1.0"
description = "Framework for bioacoustic sound event detection that is robust to overlapping events."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "einops>=0.6.1",
    "intervaltree>=3.1.0",
    "librosa>=0.10.0",
    "matplotlib>=3.7.1",
    "mir-eval>=0.7",
    "numpy>=1.24.3",
    "pandas>=2.0.2",
    "plumbum>=1.8.2",
    "pyyaml>=6.0",
    "scipy>=1.10.1",
    "seaborn>=0.12.2",
    "soundfile>=0.12.1",
    "torch>=2.0.1",
    "torchaudio>=2.0.1",
    "tqdm>=4.67.0",
    "torchvision>=0.15.2",
    "pre-commit>=4.2.0",
    "pytest>=8.3.5",
]
