[project]
name = "voxaboxen"
version = "0.1.0"
description = "Framework for bioacoustic sound event detection that is robust to overlapping events."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "einops>=0.6.1",
    "intervaltree>=3.1.0",
    "librosa>=0.10.0",
    "matplotlib>=3.7.1",
    "mir-eval>=0.7",
    "numpy>=1.24.3",
    "pandas>=2.0.2",
    "plumbum>=1.8.2",
    "pyyaml>=6.0",
    "scipy>=1.10.1",
    "seaborn>=0.12.2",
    "soundfile>=0.12.1",
    "torch>=2.0.1",
    "torchaudio>=2.0.1",
    "tqdm>=4.67.0",
    "torchvision>=0.15.2",
    "pre-commit>=4.2.0",
    "pytest>=8.3.5",
    "lightning>=2.5.1.post0",
]

[tool.pytest.ini_options]
python_files = [
    "test_*.py",
    "check_*.py",
]

[tool.ruff]
line-length = 88
indent-width = 4

[tool.ruff.lint]
# List of plugins and Rules
# Pycodestyle all errors and warning, Pydoclint, Pyflakes, bugbear, annotations
select = ["E4", "E7", "E9", "F", "I"] # Default rules
extend-select = ["DOC", "B9", "B", "E", "W", "ANN"]
fixable = ["ALL"]
unfixable = []
preview = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-line-length = "dynamic"

[tool.ruff.lint.mccabe]
# Flag errors (`C901`) whenever the complexity level exceeds 10.
max-complexity = 10

[tool.codespell]
skip = "*.csv"

[tool.deptry]
exclude = ["conftest.py", ".venv"]